Basic markup made

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-boilerplate",
-  "version": "0.2.0",
-  "description": "React Boilerplate",
+  "name": "react-materialize-todo",
+  "version": "0.1.0",
+  "description": "To Do",
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js"
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.6.0",
+    "materialize-css": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
