--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
     "autoprefixer": "^9.6.0",
     "gh-pages": "^2.0.1",
     "materialize-css": "^1.0.0",
